--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Website v1.0</title>
 </head>
 <body>
-    <h1>Web version 1</h1>
+    <h1>website with git repo </h1>
 </body>
 </html>
