Update website version in header to 5.0

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Website v1.0</title>
 </head>
 <body>
-    <h1>website with git repo v4.1</h1>
+    <h1>website with git repo version 5.0</h1>
 </body>
 </html>
